# mba_esalq_tcc_mlops

./: .env.example  .gitignore  README.md  docker-compose.yml  executar_notebook_ci.py  pyproject.toml  pytest.ini  setup.cfg  setup_dirs.py  teste_pipeline_decorators.py
.github/workflows/: ci.yml  deploy.yml
config/: README.md  config_clearml.py  config_custom.py  config_gerais.py  logger_config.py
dados/: 2025.05.14_thermal_confort_santa_maria_brazil_.csv
docs/: MLOPS-QUICKSTART.md  README.md  SESSION_SUMMARY.md  api-guia.md  clearml-configuracao.md  configuracao-mlops.md  deploy-gcp-setup.md  estrutura-cicd.md  guia-api.md  mlops-setup.md
docs/arquivados/: README.md  deploy-gcp.md  mlops-pipeline.md  refatoracao-pipeline-unificado.md  relatorio_implementacao_mlops.md  revisao-codigo-status.md
exemplos/: demo_clearml.py  demo_rapido.py  exemplo_pipeline_unificado.py  exemplo_treinamento_completo.py
exemplos/modelos_exemplo/: exemplo_modelo.pkl  modelo_exemplo_final.pkl
legacy/: README.md  cloudbuild-minimal.yaml  cloudbuild.yaml  executar_notebook.py  executar_pipeline_notebook.py  executar_pipelines.py  pipeline_processamento_antigo.py  pipeline_processamentos.py  pipeline_treinamento_antigo.py  pipelne_features_derivadas.py  processamento.py  processamento_helpers.py  testar_mlops_completo.py  teste_modulo_treinamento.py
notebooks/: Notebook_Pipeline_Unificado.ipynb  Notebook_execucao_c_clearml.ipynb  Notebook_executar_pipelines.ipynb  Notebook_executar_pipelines2.ipynb  Notebook_graficos.ipynb  Notebook_testes.ipynb
scripts/: configurar_implantacao_github.ps1
src/api/: Dockerfile  README.md  __init__.py  api.pkl  aplicacao.py  app.py  configuracoes.py  contracts.py  contratos.py  predictor.py  preditor.py  pyproject.toml  requirements.txt  settings.py
src/clearml/: README.MD  README_REFATORACAO.md  __init__.py  clearml_project.py  decorators.py  executar_pipelines.py  pipeline_01_processamento.py  pipeline_01_processamento.py_old  pipeline_02_features.py  pipeline_03_treinamento.py  pipeline_completo_decorators_ascii.py  pipeline_simples_local.py  registrar_modelo_clearml.py  task_manager.py
src/features/: README.md  __init__.py
src/integracao_clearml/: README.MD  README_REFATORACAO.md  __init__.py  dataset_manager.py  executar_pipelines.py  pipeline_completo_decorators.py  registrar_modelo_clearml.py
tests/: README.md  __init__.py  conftest.py
(+160 files in other folders)
