[project]
name = "tcc-mba-esalq"
version = "1.1"
description = "Pipelines ClearML/PyCaret para conforto térmico com API FastAPI"
readme = "README.md"
requires-python = ">=3.11,<3.12"  # PyCaret 3.3.2 suporta até 3.11
authors = [{ name = "Marlon Resende Faria" }]
dependencies = [
  "pandas>=2.1,<2.2",
  "numpy>=1.26,<2.0",
  "scikit-learn>=1.4,<1.5",
  "joblib>=1.3,<1.4",
  "pyyaml>=6.0",
  "requests>=2.31,<3.0",
  "pyarrow>=9,<16",
  "feather-format>=0.4,<0.5",
  "clearml>=1.13,<1.14",
  "pycaret[mlops]==3.3.2",
  "python-dotenv>=1.0,<2.0",
  "fastapi>=0.104,<0.111",
  "uvicorn[standard]>=0.24,<0.28",
  "httpx>=0.25,<0.28",
]

[project.optional-dependencies]
test = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "pytest-asyncio==0.21.1",
  "hypothesis==6.99.13",
  "faker==20.1.0",
  "factory-boy==3.3.0",
  "responses==0.24.1",
  "freezegun==1.2.2",
]
dev = [
  "bandit>=1.7,<1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funcoes", "src/api", "src/pipelines"]

