[project]
name = "thermal-comfort-api"
version = "0.1.0"
description = "Standalone FastAPI service for thermal comfort prediction"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.104,<0.111",
  "uvicorn[standard]>=0.24,<0.28",
  "pandas>=2.1,<2.2",
  "pycaret==3.3.2",
  "pydantic>=2.5,<2.8",
]

[project.scripts]
thermal-comfort-api = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "app.py",
  "contracts.py",
  "predictor.py",
  "settings.py",
]

